--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,46 +1,32 @@
 .contactContainer {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  align-items: flex-start;
+  gap: 10px;
 }
 
-.contactItem {
+.contactEl {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
-  justify-content: space-between;
-  background-color: #fff;
+  gap: 10px;
   padding: 5px;
-  border-radius: 4px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
 }
-
-/* .contactItem:nth-child(even) {
-  background-color: #f5f5f5;
-} */
 
 .contactName {
-  color: #333;
-  font-size: 16px;
   font-weight: bold;
-  margin-right: 5px;
 }
 
-.contactButton {
-  padding: 8px 16px;
-  font-size: 16px;
-  background-color: #d52828;
-  color: #fff;
+.contactBtn {
+  background-color: #cc2828;
+  color: white;
   border: none;
+  padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.contactButton:hover {
-  background-color: #9e0035;
-}
-
-.contactCreatedAt {
-  color: #676767;
-  font-size: 12px;
-  margin-left: 10px;
+.contactBtn:hover {
+  background-color: #d33c39;
 }
